--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,1 @@
-h1:first-letter, h2:first-letter, h3:first-letter, h4:first-letter, h5:first-letter, h6:first-letter {
-    text-transform: uppercase
-}
-
-/*# sourceMappingURL=style.css.map */
+h1:first-letter,h2:first-letter,h3:first-letter,h4:first-letter,h5:first-letter,h6:first-letter{text-transform:uppercase}/*# sourceMappingURL=style.css.map */
